<resources>
    <string name="app_name">Diseño de Interfaces Móviles</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="nombre">Blas Fernández G.</string>
    <string name="fila_1">Fila 1</string>
    <string name="fila_2_col_1">Fila 2 Col 1</string>
    <string name="fila_2_col_2">Fila 2 Col 2</string>
    <string name="fila_2_col_3">Fila 2 Col 3</string>
    <string name="fila_3_col_1">Fila 3 Col 1</string>
    <string name="fila_3_col_2">Fila 3 Col 2</string>
    <string name="fila_4_col_1">Fila 4 Col 1</string>
    <string name="fila_4_col_2">Fila 4 Col 2</string>
    <string name="fila_5">Fila 5</string>
    <string name="adre_a">Adreça</string>
    <string name="email_t5">Email</string>
    <string name="tel_fon">Telèfon</string>
    <string name="nom">Nom</string>
    <string name="enviar">Enviar</string>
</resources>