<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#59AEA3">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_span="3"
                android:text="@string/fila_1"
                android:gravity="center_vertical|center_horizontal"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="#2E94ED"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fila_2_col_1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="#FFDE36"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fila_2_col_2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="#FFA113"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fila_2_col_3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_span="2"
                android:background="#E91E63"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fila_3_col_1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="#8BC34A"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fila_3_col_2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="#00BCD4"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fila_4_col_1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_span="2"
                android:background="#A57EEA"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fila_4_col_2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_span="3"
                android:background="#F44336"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fila_5" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>