<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/user" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nom"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/phone_call" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tel_fon"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/pin" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/adre_a"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/email" />

            <EditText
                android:id="@+id/editTextTextPersonName7"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_t5"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:text="@string/enviar"
                android:layout_span="2"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>